--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.17",
     "framer-motion": "^12.23.24",
-    "gsap": "^3.13.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "ogl": "^1.0.11",
