--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
     "split-type": "^0.3.4",
     "typewriter-effect": "^2.22.0"
